--- a/static/header.css
+++ b/static/header.css
@@ -30,7 +30,7 @@ body{
 
 .posicion_nombre {
     position: absolute;
-    top: 9px;
+    top: -5px;
     left: 112px;
     color: #b5fbfb;
 }
@@ -62,6 +62,17 @@ body{
     margin-right: 10px;
     width: 2%;
     height: auto;
+}
+
+.button_experience {
+    background-color: #333337;
+    color: white;
+    border: none;
+    border-radius: 17%;
+    cursor: pointer;
+    padding: 4px 9px;
+    opacity: 0.6;
+    transition: background-color 0.3s ease, opacity 0.3s ease;
 }
 
 /*Descripción*/
