Se modificaron los colores en el header de la pagina

--- a/templates/header.html
+++ b/templates/header.html
@@ -15,12 +15,12 @@
             <img src="../static/images/foto.png" alt="Foto mia" class="imagen-circular">
         </div>
         <p id="nombre" style="font-size: 30px;" class="posicion_nombre"><b>Johan Alejandro Duque Agudelo</b></p>
-        <p class="posicion_cargo" id="Cargo"> <b> Analista de sistemas e de seguridad informatica</b></p>
+        <p class="posicion_cargo" id="Cargo"> <b> Analista de sistemas e investigador de seguridad informatica</b></p>
         
         <div class="contenedor">
             <img src="../static/images/correo.png" class="icons_links">
             <a class="texto_alineado" href="https://gmail.com" target="_blank" style="text-decoration: none;">
-                <p style="color: blueviolet;" id="email">johanduquea10@gmail.com</p>
+                <p id="email">johanduquea10@gmail.com</p>
             </a>
         </div>
         
@@ -40,21 +40,31 @@
     </div>
     
     <div>
-        <ul class="sobre_mi">
-        <li><h1 style="font-size: medium;"><b>SOBRE MI</b></h1></li>
-        </ul>
-        <p>Soy una persona proactiva, excelente compañero de equipo, organizado y responsable. Disfruto mucho aprender cosas nuevas, por lo que mi objetivo es un puesto <br>desafiante y dinámico donde poder compartir mi experiencia y a su vez sumar nuevos conocimientos, soy un apasionado por la ciberseguridad, me gusta<br>investigar y estar al tanto de nuevas metodologías de ataques para identificar y prevenir amenazas.</p>
+        <ul class="posicion_descripcion">
+        <li><h1 style="font-size: medium; color: #92aecb;"><b>SOBRE MI</b></h1></li>
+            <ul style="position: relative; left: -1%;">    
+                <li><p style="color: #669787;">Soy una persona proactiva, excelente compañero de equipo, organizado y responsable. Disfruto mucho aprender cosas nuevas, por lo que mi objetivo es un puesto <br>desafiante y dinámico donde poder compartir mi experiencia y a su vez sumar nuevos conocimientos, soy un apasionado por la ciberseguridad, me gusta<br>investigar y estar al tanto de nuevas metodologías de ataques para identificar y prevenir amenazas.</p></li>
+            </ul>
+        </ul>   
     </div>
 
+    <div>
+        <ul class="posicion_descripcion">
+            <li><h1 style="font-size: medium; color: #92aecb;"><b>OBJETIVO</b></h1></li>
+            <ul style="position: relative; left: -1%;">
+                <li><p style="color: #669787;">Posicionarme como developer full stack enfocado a desarrolo de malware y auditor de ciberseguridad.</p></li>
+            </ul>
+        </ul>
+    </div>
     <br>
 
     <div style="color: #b5fbfb;"><ul>
         
-        <li><label style="font-size: medium;" for="Experiencia"><b>EXPERIENCIA LABORAL</b></label>
+        <li><label style="font-size: medium; color: #92aecb;" for="Experiencia"><b>EXPERIENCIA LABORAL</b></label>
         <select name="Experiencia" id="Experiencia" onchange="mostrarseleccion()" class="button_experience">
         
             <option value="0">Selecciona</option>
-            <option value="Teleperformace">Teleperformance</option>
+            <option value="Teleperformace" >Teleperformance</option>
             <option value="Creaciones Nadar S.A">Creaciones Nadar S.A</option>
 
         </select>
@@ -66,7 +76,7 @@
 
     <div style="color: #b5fbfb;"><ul>
 
-        <li><label style="font-size: medium;" for="Estudios"><b>ESTUDIOS</b></label>
+        <li><label style="font-size: medium; color: #92aecb;" for="Estudios"><b>ESTUDIOS</b></label>
         <select name="Estudios" id="Estudios" onchange="mostrarestudios()" class="button_experience">
 
             <option value="0">Selecciona</option>
@@ -83,25 +93,10 @@
 
     <br>
 
-    <div>
-        <div>
-            <ol style="color: blueviolet;">
-                <li id="margen-top"><a href=""><span>Acerca de mí</span></a></li>
-                <li id="margen-top"><a href=""><span>Empresa</span></a></li>
-                <li id="margen-top"><a href=""><span>Estudios</span></a></li>
-                <li id="margen-top"><a href=""><span>Proyectos</span></a></li>
-            </ol>
-        </div>
-    </div>
-
     <br>
 
     <div>
         <div>
-            <h4>Objetivo</h4>
-            <p>Posicionarme como developer full stack</p>
-            <h4>Experiencia</h4>
-            <p>Analista en sistemas, Creaciones Nadar S.A (2021-2023)</p>
             <ul>
                 <li>Diseñé e implemente funcionalidades para usuarios finales para Producto Líder</li>
                 <li>Realice varias automatizaciones con Python y Bash</li>
