--- a/static/header.css
+++ b/static/header.css
@@ -32,14 +32,15 @@ body{
     position: absolute;
     top: -5px;
     left: 112px;
-    color: #b5fbfb;
+    color: #608fbf;
 }
 
 .posicion_cargo {
     position: absolute;
-    top: 38px;
+    top: 42px;
     left: 113px;
-    color: #b5fbfb;
+    color: #a9c0da;
+    font-size: smaller;
 }
 
 /*Iconos*/
@@ -54,7 +55,7 @@ body{
 
 .texto_alineado {
     text-align: left;
-    color: blueviolet;
+    color: #6b4d87;
     position: relative;
     top: 1px;
 }
