--- a/static/header.css
+++ b/static/header.css
@@ -66,7 +66,7 @@ body{
 }
 
 .button_experience {
-    background-color: #333337;
+    background-color: #000000;
     color: white;
     border: none;
     outline: none;
@@ -89,4 +89,9 @@ body{
     top: 413px;
     left: 420px;
     color: #b5fbfb;
+}
+
+.espacio_lista {
+    margin-bottom: 5px;
+    padding-bottom: 5px;
 }
