Se centro la direccion

--- a/templates/header.html
+++ b/templates/header.html
@@ -136,7 +136,7 @@
     <br>
 
     <div id="pie">
-        <p id="direccion">Calle 93B # 34 50, <span>Medellín</span> 12345-6789 | Tel: <span>(555) 555-5555</span></p>
+        <p style="color: #669787; text-align: center;">Calle 93B # 34 50, <span>Medellín</span> 12345-6789 | Tel: <span>(555) 555-5555</span></p>
     </div>
 </body>
 
